--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: Playwright Tests with Allure and GitHub Pages Deployment
+
 on:
   push:
-    branches: [ test ]
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -11,158 +14,375 @@ permissions:
 
 # Allow only one concurrent deployment
 concurrency:
-  group: "pages"
+  group: "pages-${{ github.ref }}"
   cancel-in-progress: false
+
+env:
+  PYTHON_VERSION: "3.12"
+  PLAYWRIGHT_BROWSERS_PATH: 0
 
 jobs:
   test:
+    name: Run Playwright Tests
     runs-on: ubuntu-latest
     timeout-minutes: 40
+
     strategy:
       matrix:
-        browser: [chromium]  # Only chromium
+        browser: [chromium]
       fail-fast: false
+
     steps:
-      - name: Checkout repository
+      # ============================================
+      # Checkout & Setup
+      # ============================================
+      - name: 📥 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: 🐍 Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.14"
+          python-version: ${{ env.PYTHON_VERSION }}
           cache: pip
 
-      - name: Install dependencies
+      # ============================================
+      # Environment Configuration
+      # ============================================
+      - name: 📋 Verify .env.example exists
+        run: |
+          if [ ! -f .env.example ]; then
+            echo "❌ .env.example not found!"
+            exit 1
+          fi
+          echo "✅ .env.example found"
+          cat .env.example
+
+      - name: 🔧 Create .env from .env.example
+        run: |
+          echo "🔧 Creating .env from template..."
+          cp .env.example .env
+          
+          # Override with secrets if available
+          if [ ! -z "${{ secrets.BASE_URL }}" ]; then
+            sed -i "s|^BASE_URL=.*|BASE_URL=${{ secrets.BASE_URL }}|" .env
+          fi
+          
+          if [ ! -z "${{ secrets.LOGIN_URL }}" ]; then
+            sed -i "s|^LOGIN_URL=.*|LOGIN_URL=${{ secrets.LOGIN_URL }}|" .env
+          fi
+          
+          if [ ! -z "${{ secrets.TEST_USERNAME }}" ]; then
+            sed -i "s|^TEST_USERNAME=.*|TEST_USERNAME=${{ secrets.TEST_USERNAME }}|" .env
+          fi
+          
+          if [ ! -z "${{ secrets.TEST_PASSWORD }}" ]; then
+            sed -i "s|^TEST_PASSWORD=.*|TEST_PASSWORD=${{ secrets.TEST_PASSWORD }}|" .env
+          fi
+          
+          # Force CI settings
+          sed -i "s|^HEADLESS=.*|HEADLESS=true|" .env
+          sed -i "s|^SLOW_MO=.*|SLOW_MO=0|" .env
+          sed -i "s|^RECORD_VIDEO=.*|RECORD_VIDEO=false|" .env
+          
+          # Add CI variables
+          echo "" >> .env
+          echo "# CI Variables" >> .env
+          echo "CI=true" >> .env
+          echo "BROWSER=${{ matrix.browser }}" >> .env
+          echo "GITHUB_RUN_ID=${{ github.run_id }}" >> .env
+          echo "GITHUB_RUN_NUMBER=${{ github.run_number }}" >> .env
+          echo "GITHUB_SHA=${{ github.sha }}" >> .env
+          
+          echo "✅ .env created"
+
+      - name: ✅ Verify .env configuration
+        run: |
+          echo "📋 Configuration (non-sensitive):"
+          grep -v -E "PASSWORD|SECRET|TOKEN" .env | grep -v "^#" | grep -v "^$" || true
+
+      # ============================================
+      # Install Dependencies
+      # ============================================
+      - name: 📦 Cache Python dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: 📦 Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install allure-pytest playwright
+          pip install allure-pytest playwright python-dotenv
+          echo "✅ Dependencies installed"
 
-      - name: Install Playwright Chromium
+      - name: 🎭 Cache Playwright browsers
+        id: playwright-cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ hashFiles('**/requirements.txt') }}
+
+      - name: 🎭 Install Playwright Chromium
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
         run: |
           python -m playwright install chromium --with-deps
+          echo "✅ Playwright installed"
 
-      - name: Install Allure CLI
+      - name: 🎭 Update Playwright dependencies
+        if: steps.playwright-cache.outputs.cache-hit == 'true'
+        run: |
+          python -m playwright install-deps chromium
+          echo "✅ Dependencies updated"
+
+      # ============================================
+      # Install Allure
+      # ============================================
+      - name: 📊 Cache Allure CLI
+        id: allure-cache
+        uses: actions/cache@v4
+        with:
+          path: /opt/allure
+          key: ${{ runner.os }}-allure-cli-v2
+
+      - name: 📊 Install Allure CLI
+        if: steps.allure-cache.outputs.cache-hit != 'true'
         run: |
           LATEST_URL=$(curl -s https://api.github.com/repos/allure-framework/allure2/releases/latest \
             | grep browser_download_url \
             | grep zip \
             | cut -d '"' -f 4)
-          echo "Downloading Allure from: $LATEST_URL"
-          wget $LATEST_URL -O allure.zip
-          sudo apt-get update
-          sudo apt-get install -y unzip default-jre
-          unzip allure.zip
+          echo "📥 Downloading Allure: $LATEST_URL"
+          wget -q $LATEST_URL -O allure.zip
+          sudo apt-get update -qq
+          sudo apt-get install -y -qq unzip default-jre
+          unzip -q allure.zip
           ALLURE_DIR=$(find . -mindepth 1 -maxdepth 1 -type d -name "allure-[0-9]*" | head -n 1)
           sudo mv "$ALLURE_DIR" /opt/allure
-          sudo ln -s /opt/allure/bin/allure /usr/bin/allure
-          allure --version
+          sudo ln -sf /opt/allure/bin/allure /usr/bin/allure
+          echo "✅ Allure installed"
 
-      - name: Run Playwright Page tests_pages synchronously
+      - name: 📊 Verify Allure installation
+        run: |
+          allure --version
+          echo "✅ Allure ready"
+
+      # ============================================
+      # Run Tests
+      # ============================================
+      - name: 📁 Create test directories
         run: |
           mkdir -p allure-results
-          for test_file in $(find tests_pages -type f -name "test_*.py"); do
-              echo "Running $test_file..."
-              pytest "$test_file" --browser chromium --alluredir=allure-results -v
+          mkdir -p test-results/screenshots
+          echo "✅ Directories created"
+
+      - name: 🧪 Run Playwright Page Tests
+        run: |
+          echo "🧪 Running Playwright tests..."
+          echo "================================================"
+          
+          test_count=0
+          passed_tests=0
+          failed_tests=0
+          
+          test_files=$(find tests_pages -type f -name "test_*.py" 2>/dev/null | sort)
+          
+          if [ -z "$test_files" ]; then
+            echo "⚠️ No test files found"
+            exit 0
+          fi
+          
+          for test_file in $test_files; do
+              test_count=$((test_count + 1))
+              echo "📝 Running: $(basename $test_file)"
+              
+              if pytest "$test_file" \
+                  --browser chromium \
+                  --alluredir=allure-results \
+                  -v; then
+                  echo "✅ PASSED"
+                  passed_tests=$((passed_tests + 1))
+              else
+                  echo "❌ FAILED"
+                  failed_tests=$((failed_tests + 1))
+              fi
+              echo ""
           done
+          
+          echo "================================================"
+          echo "📊 Summary: $passed_tests passed, $failed_tests failed"
+          echo "================================================"
 
-#      - name: Run Playwright API tests_api synchronously
-#        run: |
-#          for test_file in $(find tests_api -type f -name "test_*.py"); do
-#              echo "Running $test_file..."
-#              pytest "$test_file" --browser chromium --alluredir=allure-results -v
-#          done
+      # Uncomment when ready
+      # - name: 🧪 Run Playwright API Tests
+      #   run: |
+      #     for test_file in $(find tests_api -type f -name "test_*.py"); do
+      #         echo "Running $test_file..."
+      #         pytest "$test_file" --browser chromium --alluredir=allure-results -v || true
+      #     done
 
-      - name: Generate Allure Report
+      # ============================================
+      # Generate Report
+      # ============================================
+      - name: 📊 Add environment info
+        if: always()
+        run: |
+          set -a
+          source <(grep -v '^#' .env | grep -v '^$' | sed 's/\r$//')
+          set +a
+          
+          cat > allure-results/environment.properties << EOF
+          Application=Candi Leasing
+          Base.URL=${BASE_URL}
+          Browser=${{ matrix.browser }}
+          Headless=${HEADLESS}
+          Python=${{ env.PYTHON_VERSION }}
+          Build=${{ github.run_number }}
+          Commit=${{ github.sha }}
+          Branch=${{ github.ref_name }}
+          Actor=${{ github.actor }}
+          Timestamp=$(date -u '+%Y-%m-%d %H:%M:%S UTC')
+          EOF
+
+      - name: 📊 Generate Allure Report
         if: always()
         run: |
           rm -rf allure-report
           allure generate allure-results -o allure-report --clean
           ls -la allure-report
+          echo "✅ Report generated"
 
-      - name: Zip Allure Report
+      - name: 📦 Zip Allure Report
         if: always()
         run: |
-          zip -r allure-report.zip allure-report
+          zip -r allure-report-${{ github.run_number }}.zip allure-report
+          echo "📦 Size: $(du -h allure-report-${{ github.run_number }}.zip | cut -f1)"
 
-      - name: Upload Allure artifacts
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: allure-report
-          path: |
-            allure-results
-            allure-report.zip
-          retention-days: 30
-
-      - name: Verify Allure Report Directory
+      - name: 📄 Verify Report
         if: always()
         run: |
           echo "Checking allure-report directory..."
           ls -la allure-report/
-          echo "Total files in allure-report:"
-          find allure-report -type f | wc -l
+          echo "Total files: $(find allure-report -type f | wc -l)"
 
-      - name: Setup Pages
+      # ============================================
+      # Upload Artifacts
+      # ============================================
+      - name: 📤 Upload Allure Results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: allure-results-${{ github.run_number }}
+          path: allure-results
+          retention-days: 30
+
+      - name: 📤 Upload Allure Report ZIP
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: allure-report-${{ github.run_number }}
+          path: allure-report-${{ github.run_number }}.zip
+          retention-days: 30
+
+      - name: 📤 Upload Screenshots
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: screenshots-${{ github.run_number }}
+          path: test-results/screenshots/
+          retention-days: 14
+          if-no-files-found: ignore
+
+      # ============================================
+      # Deploy to GitHub Pages
+      # ============================================
+      - name: 📄 Setup Pages
         if: always()
         uses: actions/configure-pages@v4
 
-      - name: Upload artifact for GitHub Pages
+      - name: 📤 Upload to Pages
         if: always()
         uses: actions/upload-pages-artifact@v3
         with:
           path: './allure-report'
 
-      - name: Deploy to GitHub Pages
+      - name: 🚀 Deploy to Pages
         if: always()
         id: deployment
         uses: actions/deploy-pages@v4
 
-      - name: Output Pages URL
+      - name: 🎉 Output Report URL
         if: always()
         run: |
-          echo "Allure Report deployed to: ${{ steps.deployment.outputs.page_url }}"
+          echo "================================================"
+          echo "📊 Allure Report: ${{ steps.deployment.outputs.page_url }}"
+          echo "================================================"
 
-      # Netlify deployment (commented out)
-      # - name: Deploy Allure Report to Netlify
+      # ============================================
+      # Optional: Netlify Deployment
+      # ============================================
+      # Uncomment to enable Netlify deployment
+      # - name: 🌐 Deploy to Netlify
+      #   if: always()
       #   env:
       #     NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
       #     NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
       #   run: |
-      #     # Install Netlify CLI
       #     npm install -g netlify-cli@latest
       #
-      #     # Verify environment variables are set
       #     if [ -z "$NETLIFY_AUTH_TOKEN" ]; then
-      #       echo "Error: NETLIFY_AUTH_TOKEN is not set"
+      #       echo "Error: NETLIFY_AUTH_TOKEN not set"
       #       exit 1
       #     fi
       #
       #     if [ -z "$NETLIFY_SITE_ID" ]; then
-      #       echo "Error: NETLIFY_SITE_ID is not set"
+      #       echo "Error: NETLIFY_SITE_ID not set"
       #       exit 1
       #     fi
       #
       #     echo "Deploying to Netlify..."
-      #     echo "Site ID: $NETLIFY_SITE_ID"
-      #
-      #     # Deploy using Netlify CLI
       #     netlify deploy \
       #       --dir=allure-report \
       #       --prod \
       #       --auth="$NETLIFY_AUTH_TOKEN" \
       #       --site="$NETLIFY_SITE_ID" \
-      #       --message="Automated Allure report deploy - Build ${{ github.run_number }}" \
+      #       --message="Build ${{ github.run_number }}" \
       #       --json > deploy-output.json
       #
-      #     # Check if deployment was successful
       #     if [ $? -eq 0 ]; then
-      #       echo "Deployment successful!"
-      #       cat deploy-output.json
+      #       echo "✅ Deployment successful!"
       #       DEPLOY_URL=$(cat deploy-output.json | grep -o '"deploy_url":"[^"]*"' | cut -d'"' -f4)
-      #       echo "Report URL: $DEPLOY_URL"
+      #       echo "📊 Netlify URL: $DEPLOY_URL"
       #     else
-      #       echo "Deployment failed!"
+      #       echo "❌ Deployment failed!"
       #       cat deploy-output.json
       #       exit 1
       #     fi
+
+      # ============================================
+      # Summary
+      # ============================================
+      - name: 📊 Job Summary
+        if: always()
+        run: |
+          echo "# 🧪 Test Execution Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Property | Value |" >> $GITHUB_STEP_SUMMARY
+          echo "|----------|-------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Build | #${{ github.run_number }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Browser | ${{ matrix.browser }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Commit | \`${{ github.sha }}\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| Branch | \`${{ github.ref_name }}\` |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "📊 [View Report](${{ steps.deployment.outputs.page_url }})" >> $GITHUB_STEP_SUMMARY
+
+      # ============================================
+      # Cleanup
+      # ============================================
+      - name: 🧹 Cleanup
+        if: always()
+        run: |
+          rm -f .env
+          echo "✅ Cleanup complete"
