--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ LOGIN_URL=https://candileasing.netlify.app/
 # Test Credentials
 TEST_USERNAME=oladejo.lasisi@c-ileasing.com
 TEST_PASSWORD=PAa@12345
+TEST_WRONG_USERNAME=bonduu001@yahoo.com
+TEST_WRONG_PASSWORD=Bat165474@@
 
 # Browser Settings
 HEADLESS=true
